cluster-cd/apps/bitty/home/zwavejs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zwave
  template:
    metadata:
      labels:
        name: zwave
        app: zwavejs
        app.kubernetes.io/instance: zwavejs
        app.kubernetes.io/name: zwavejs
        app.kubernetes.io/part-of: zwavejs
    spec:
      containers:
        - name: zwave
          image: ghcr.io/zwave-js/zwave-js-ui:10.1.0
          # livenessProbe:
          #   failureThreshold: 10
          #   httpGet:
          #     httpHeaders:
          #       - name: Accept
          #         value: text/plain
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 3
          #   successThreshold: 1
          #   timeoutSeconds: 1
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: ws
              protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 400Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
          volumeMounts:
            - mountPath: /dev/zwave
              name: zwavestick
            - mountPath: /usr/src/app/store
              name: zwave-data
      volumes:
        - name: zwavestick
          hostPath:
            path: /dev/serial/by-id/usb-Zooz_800_Z-Wave_Stick_533D004242-if00
            type: CharDevice
        - name: zwave-data
          persistentVolumeClaim:
            claimName: zwavejs
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "zwave.feature.node.kubernetes.io/zwave"
                    operator: In
                    values:
                      - "true"
