cluster-cd/apps/bitty/home/zwavejs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
  labels:
    app.kubernetes.io/instance: zwave
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ws
      port: 3000
      targetPort: ws
  selector:
    name: zwave
